--- a/WpfWalkThrough/MainWindow.xaml
+++ b/WpfWalkThrough/MainWindow.xaml
@@ -5,12 +5,23 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:WpfWalkThrough"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MojeAppka"
+    xmlns:properties="clr-namespace:WpfWalkThrough.Properties"
+    Title="{x:Static properties:Resource1.AppTitle}"
     Width="800"
-    Height="150"
+    Height="250"
     PreviewMouseUp="Window_PreviewMouseUp"
     mc:Ignorable="d">
+    <!--
+        xmlns:properties="clr-namespace:WpfWalkThrough.Properties" vytvoří nový jmenný prostor, do kterého se
+        budeme odkazovat pod jménem "properties"
+    -->
+    <!--
+        Název okna vezmeme ze souboru Resource1, ve kterém hledáme záznam s klíčem 'AppTitle',
+        Access modifier musí být public!
+    -->
+
     <Window.Resources>
+        <!--  Tento Resource má rozsah jen pro toto Window - proto se jmenuje ...něcoLocal  -->
         <Style x:Key="WindowLocal" TargetType="Button">
             <Setter Property="Background" Value="Orange" />
             <Setter Property="BorderBrush" Value="Crimson" />
@@ -18,16 +29,31 @@
             <Setter Property="FontWeight" Value="Bold" />
             <Setter Property="Margin" Value="25" />
         </Style>
+        <Style x:Key="LabelLocal" TargetType="Label">
+            <Setter Property="Foreground" Value="White"/>
+        </Style>
+        <Style x:Key="ScrollLocal" TargetType="ScrollViewer">
+            <Setter Property="Background" Value="Gray"/>
+        </Style>
     </Window.Resources>
 
     <StackPanel>
         <DockPanel>
-            <ScrollViewer>
-                <Label Name="label">Klikni na tlačítko</Label>
+            <!--  Použijeme lokální styl  -->
+            <ScrollViewer x:Name="Scroll1" Style="{StaticResource ScrollLocal}">
+                <Label x:Name="label1" Style="{StaticResource LabelLocal}"/>
             </ScrollViewer>
-            <Button Name="button" Style="{StaticResource WindowLocal}">Click Me!</Button>
-            <Button Name="buttonToo">Click Me Too!</Button>
+
+            <!--  Použijeme lokální styl  -->
+            <Button x:Name="button" Style="{StaticResource WindowLocal}">Klikni na mě!</Button>
+
+            <!--  Použijeme globální styl definovaný v App.xaml a platný pro všechny prvky typu Button v aplikaci  -->
+            <Button x:Name="buttonToo" Content="{Binding Source={x:Static properties:Settings.Default}, Path='ZatimNic'}" />
+            <!--  Nápis na tlačítku vezmeme z prostoru properties, ze souboru Settings a klíčem 'ZatimNic'  -->
         </DockPanel>
-        <TextBlock FontWeight="DemiBold" VerticalAlignment="Bottom" Text="{Binding LastClick}"/>
+        <TextBlock
+            VerticalAlignment="Bottom"
+            FontWeight="DemiBold"
+            Text="{Binding LastClick}" />
     </StackPanel>
 </Window>
